[tool.poetry]
name = "jsonschema2md"
version = "0.1.0"
description = "Convert JSON Schema to human-readable Markdown documentation"
authors = ["Ralf Gabriels <ralfg@hotmail.be>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/RalfG/jsonschema2md"
keywords = ["JSON Schema", "Markdown", "Converter", "Parser", "Documentation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Documentation",
    "Topic :: Software Development :: Documentation",
]

[tool.poetry.scripts]
jsonschema2md = 'jsonschema2md:main'

[tool.poetry.dependencies]
python = "^3.6"
click = "^7"
importlib_metadata = { version = "^1", python = "<3.8"}

[tool.poetry.dev-dependencies]
flake8 = "^3.8.3"
pytest = "^6.0.1"
pytest-cov = "^2.10.1"
pydocstyle = "^5.1.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
